slider with longer time + padding correction + titles truncated

--- a/wp-content/themes/brown-rudnick-main/assets/scss/templates/_home.scss
+++ b/wp-content/themes/brown-rudnick-main/assets/scss/templates/_home.scss
@@ -153,7 +153,10 @@
 
 // svg container
 .slider-svg {
-	height: 19px;
+	height: 20px;
+	margin-top: -20px;
+	position: relative;
+	z-index: 10;
 }
 .social-icons {
 	// svg icons on footer
@@ -563,6 +566,6 @@ span.red__border--top {
 .page-template-homepage {
 	.title__text {
 		font-family: $brfont !important;
-		font-size: 18px !important;
+		font-size: 16px !important;
 	}
 }
