--- a/wp-content/themes/brown-rudnick-main/assets/stylesheets/foundation.css
+++ b/wp-content/themes/brown-rudnick-main/assets/stylesheets/foundation.css
@@ -9578,7 +9578,10 @@ button.arrow {
   vertical-align: middle; }
 
 .slider-svg {
-  height: 19px; }
+  height: 20px;
+  margin-top: -20px;
+  position: relative;
+  z-index: 10; }
 
 .social-icons {
   display: inline-block;
@@ -9927,6 +9930,6 @@ span.red__border--top {
 
 .page-template-homepage .title__text {
   font-family: "Avenir", Helvetica, Arial, sans-serif !important;
-  font-size: 18px !important; }
+  font-size: 16px !important; }
 
 /*# sourceMappingURL=foundation.css.map */
